--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
 	"author": "Nishan Dangal",
 	"description": "This is Nishan Dangal writing simple description",
 	"keywords": ["freecodecamp","learning","project"],
+	"license": "BSD-3-Clause",
+	"version": "10.8.2",
 	"dependencies": {
-		"express": "^4.14.0"
+		"express": "^4.14.0",
+		"@freecodecamp/example":"^1.3.0"	
 	},
 	"main": "server.js",
 	"scripts": {
